* BUG#8842 Do not store the formatted context if debug mode is not on

Version 2.0 - 2018-04-13
* BUG#8326 To be able to retrieve the good value of field selection in rule parameters
* FEA#8149 Add history on rules to consult different versions
* FEA#8160 Function cache for rng (not serializable)
* BUG#8093 Use a single shared rule engine instance across a transaction
* FEA#7598 Add the "Code" column in the rules list view so it can be filtered on

Version 1.14 - 2017-11-09
* BUG#7385 Modify the test case wizard by adding a state action in order to display a new test case rule engine
* BUG#7385 Modify FunctionFinder and ignore builtins when adding values on the rule engine test
* FEA#6956 Rules are now executed in a read only transaction

Version 1.12 - 2017-04-28
* FEA#0000 Add the "Tool" rule engine type
* FEA#0000 Add randomization functions in rule engine
* FEA#0000 Add rule engine business data to calculate the date index for a table
* FEA#0000 Show rule algorithm in debug logs

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Detect and store used functions in rules
* FEA#0000 Store execution context in rule engine log

Version 1.6 - 2015-12-23
* FEA#0000 Display expected return type to help user

Version 1.4 - 2015-05-29
* FEA#0000 Add calculation date to rule engine log to retrieve more easily the good log
* FEA#0000 Execution logs are no more automatically deleted when the debug mode is removed
* FEA#0000 Move test case and execution logs to relate

Version 1.3 - 2015-01-22
* FEA#0000 Improve performances with cache

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation