@@ -2,8 +2,9 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page[@name='algorithm']/field[@name='parameters']" position="after">
-        <newline/>
-        <field name="extra_data_used" colspan="4"/>
+    <xpath expr="//page[@name='parameters']" position="after">
+        <page name="extra_data_used">
+            <field name="extra_data_used" colspan="4"/>
+        </page>
     </xpath>
 </data>
