@@ -1,3 +1,4 @@
+* FEA#8271 Simplify the rule engine view by using an expandable group
 * BUG#8842 Do not store the formatted context if debug mode is not on
 
 Version 2.0 - 2018-04-13
